# cpp_spider_server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Project/: main.cpp
Project/Core/: SpiderCore.hpp
Project/Logging/: AbstractLogHandle.hpp  LogManager.hpp  LogModule.hpp  RotatingFileLogHandle.hpp
Project/Logging/Modules/APIConnectedLogHandle/: APIConnectedLogHandle.cpp  APIConnectedLogHandle.hpp  CMakeLists.txt
Project/Logging/Modules/APIConnectedLogModule/: API.hpp  APIConnectedLogModule.cpp  APIConnectedLogModule.hpp  CMakeLists.txt
Project/Logging/Modules/JSONFileLogModule/: CMakeLists.txt  JSONFileLogModule.cpp  JSONFileLogModule.hpp
Project/Logging/Modules/RotatingFileLogHandle/: CMakeLists.txt  RotatingFileLogHandle.cpp  RotatingFileLogHandle.hpp
Project/Logging/Modules/RotatingFileLogModule/: CMakeLists.txt  RotatingFileLogModule.cpp  RotatingFileLogModule.hpp
Project/Network/: ErrorCode.hpp  IOManager.hpp  SSLConnection.hpp  TCPAcceptor.hpp
Project/Protocol/: CommandHandler.hpp  Generated.hpp  Messages.hpp  MessagesEnums.hpp
Project/Server/: CommandableSession.hpp  Server.hpp  ShellClientSession.hpp  SpiderClientSession.hpp
Project/Utils/: Serialization.hpp
RemoteShell/: CMakeLists.txt
RemoteShell/Project/: Client.hpp  ClientSession.hpp  PosixStream.hpp  SyncCommandableSession.hpp  main.cpp
test/: CMakeLists.txt
test/serializer/: CMakeLists.txt  serializer-test.cpp
test/server-test/: CMakeLists.txt  server-test.cpp
